--- a/introduction.mdx
+++ b/introduction.mdx
@@ -35,7 +35,7 @@ Max Supply - 4,000,000 UNIDX
 
 <CardGroup cols={2}>
   <Card
-    title="Discod"
+    title="Discord"
     icon="Discord"
     href="https://discord.gg/unidex"
   >
