--- a/Leverage-Trading/Design overview.mdx
+++ b/Leverage-Trading/Design overview.mdx
@@ -7,9 +7,9 @@ description: 'Platform design overview'
 
 UniDex provides three distinct advantages over other individual platforms offering perpetuals in DeFi.
 
-1. Using the UI, leverage trades are aggregated and orders are executed against the best rate against multiple leverage protocols, including perpetual protocol, GMX, SNX, and GNS.
+1. Using the UI, leverage trades are aggregated and orders are executed against the best rate through multiple leverage protocols, including perpetual protocol, GMX, SNX, and GNS.
 2. Any trading pair is supportable on the platform. This means traders can access any market so long as they have access to the internet. Custom ETFs, crypto, indices, and more are all available to the user.
-3. An intent based architecture allowing customizable pools, trading strategies, and more to be built on top of the platform. Our pools are designed to be composable, allowing for the creation of new pools with unique strategies and risk profiles. 
+3. An intent based architecture allowing customizable pools, trading strategies, and more! All this will built on top of the Unidex platform. Our pools are designed to be composable, allowing for the creation of new pools with unique strategies and risk profiles. 
 
 
 ## How it works
@@ -22,7 +22,7 @@ Different features can be accessed through various frontends while this page wil
 ### Leverage aggregation
 The protocol is designed to aggregate leverage trades across multiple protocols to offer the deepest liquidity and optimal trade routes.
 
-UniDex was the 1st to do this in DeFi dating back to early 2021, and we're constinuously improving our aggregation algorithm to better suite the growing ecosystem.
+UniDex was the 1st to do this in DeFi dating back to early 2021, and we're constinuously improving our aggregation algorithm to better suit the growing ecosystem.
 
 
 <Card
