--- a/Leverage-Trading/Liquidity Pools.mdx
+++ b/Leverage-Trading/Liquidity Pools.mdx
@@ -7,7 +7,7 @@ description: ''
 ## Concept
 
 Any market participant can pool money and provide liquidity for traders on the platform. This action can be compared to market makers in traditional finance in which their liquidity is used by traders on the platform to buy and sell positions of active trading pairs. 
-In simple words, any loses and gains are debited from the liquidity pool.
+In simple words, any losses or gains are debited from the liquidity pool.
 
 Similar models include
 - GMX's GLP
@@ -32,25 +32,25 @@ Alice opens a 1x leverage trade with 5 USDC
 Alice is at a loss of -50% on her open trade and closes this trade to prevent further loss
 
 Alice's total loss is 2.5 USDC which is sent to the pool for a total of 102.5 USDC & Alice is sent back 2.5 USDC to her account.
-the TVL of the pool has now increased to 102.5 for a 2.5% gain for poolers socialized across all poolers.
+The TVL of the pool has now increased to 102.5 for a 2.5% gain for poolers, socialized across all pool contributors.
 
 Similarly, if Bob opens the same position shortly after and gains 2.5 USDC on his trade and closes his position in profit 
 The pool loses 2.5 USDC putting it back to 100 USDC and Bob gains 7.5 USDC (5 Margin USDC + 2.5 USDC PnL)
-The pool balance is now 97.5 USDC for a 2.5% loss for poolers socialized across all poolers.
+The pool balance is now 97.5 USDC for a 2.5% loss for poolers, socialized across all pool contributors.
 ```
-All trading pairs with the selected collateral route through that speific pool. So all trades using USDC.e will trade against the USDC.e liquidity pool. All settled PnL is taken / given to the LP which is how liquidity providers are rewarded for their market-making.
+All trading pairs with the selected collateral route through that specific pool. So all trades using USDC.e will trade against the USDC.e liquidity pool. All settled PnL is taken / given to the LP which is how liquidity providers are rewarded for their market-making.
 
-LP positions can be thought of as hedging against the collective profit traders make on the platform. Thus it's important to note that LPing is not risk free and comes with risks. 
+LP positions can be thought of as hedging against the collective profit traders make on the platform. Thus it's important to note that LPing is not risk free.
 
 If there is a prolonged period of traders net PnL being positive month to month, then liquidity providers will have negative APR rates. However, as traders on the platform lose trades, then LP positions will profit from traders losses.
 
-Trading fees are also sent to poolers depending on the PrMM pools config which is displayed on the UI. 
-This helps LPs stay afloat during prolonged onesided and short term extremely volatile markets out of general gains earned through negative trader PnL.
+Trading fees are also sent to poolers depending on the PrMM pools configuration which is displayed on the UI. 
+This helps LPs stay afloat during prolonged periods of onesided trading or short term extreme market volatility.
 
 
 
 ### Why is this model used?
 
-By providing LP you are going against the traders long term net PnL. As traders lose money then you accrue rewards however, if traders make money then the pool decreases in value which also decreases your claimable amount.
+By providing to the LP you are going against the traders long term net PnL. As traders lose money you accrue rewards with the caveat being if traders make money the pool decreases in value which also decreases your claimable amount.
 
 The pool has a variable withdrawal fee and lock period to prevent gaming the system. 
