--- a/Leverage-Trading/Intent Based Orders.mdx
+++ b/Leverage-Trading/Intent Based Orders.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Intent Based Orders'
-description: 'This page covers all things conditional orders, such as limit orders, stop losses, automated trade coverage, and more'
+description: 'This page covers all things conditional orders, such as: limit orders, stop losses, automated trade coverage, and more'
 ---
 
 ## Introduction
@@ -11,11 +11,11 @@ The way these work is similar to any other limit order solution, except it can b
 
 UniDex limit orders on the other hand, execute based on a set of instructions that keepers can understand and translate.
 
-Want your BTC Long trade to have a stop loss if the SPY dips below a certain value? ETH Short opened if SOL crosses a specific value? 
+Want your BTC long trade to have a stop loss if the SPY dips below a certain value? What about an ETH short opened if SOL crosses a specific value? 
 
 Maybe a BTC short opened if TWAP price hits a particular value, or even TWAP out of your existing trade in set intervals?
 
-Keepers also have a record of every pending limit order and unexecuted market orders. This lets the keeper ALWAYS have perfect execution and the ability to execute missed trades. "Look backs" are possible where the keeper "looks back" at previously un-executed market orders and oracle prices to execute any missed trades in 1 minute intervals.
+Keepers also have a record of every pending limit order and unexecuted market order. This lets the keeper ALWAYS have perfect execution and the ability to execute missed trades. "Look backs" are possible where the keeper "looks back" at previously un-executed market orders and oracle prices to execute any missed trades in 1 minute intervals.
 <Card
   title="Plant Store Endpoints"
   icon="leaf"
