--- a/perpaggregation/Fees.mdx
+++ b/perpaggregation/Fees.mdx
@@ -8,7 +8,7 @@ title: 'Fees charged through Aggregation'
 
 `There are no fees charged by UniDex for aggregated trades` 
 
-There are fees charged by the underlying protocols however. For example, GMXv1 charges a 0.1% fee on every trade. UniDex does not charge any additional fees on top of this. However, UniDex does pass a referral address to collect a rebate from each aggregated order.
+There are fees charged by the underlying protocols however. For example, GMXv1 charges a 0.1% fee on every trade. UniDex does not charge any additional fees on top of this. UniDex does pass a referral address to collect a rebate from each aggregated order.
 
-This lets UniDex traders both save on fees and earn a rebate on every trade by using UniDex. The rebate is currently variable based on the protocol and the size of the trade and the overall volume of our protocol. 
+This lets UniDex traders both save on fees and earn a rebate on every trade by using UniDex. The rebate is currently variable based on the protocol aggregated, the size of the trade, and the overall volume. 
 
