--- a/swaps/markdown.mdx
+++ b/swaps/markdown.mdx
@@ -5,7 +5,7 @@ icon: 'text-size'
 ---
 
 
-UniDex provides a superior swapping experience by utilizing multiple aggregators to optimize routing paths. Our system compares and aggregates orders across various aggregators to ensure the most efficient and cost-effective execution.
+UniDex provides a superior swapping experience by utilizing multiple aggregators to optimize routing paths. Our system compares and meta-aggregates orders by sweeping competing stand-alone aggregators to ensure the most efficient and cost-effective execution.
 
 <Tip>
 
