--- a/Leverage-Trading/Pair Specs.mdx
+++ b/Leverage-Trading/Pair Specs.mdx
@@ -4,6 +4,7 @@ description: 'Section with currently listed pairs and their specs'
 ---
 
 <Note>
+Last Updated 14/12/23
 This list is subject to change. Please check back often for updates.
 </Note>
 
